--- a/skills.html
+++ b/skills.html
@@ -27,11 +27,12 @@
         <li><a href="#" class="skill-link">HTML</a></li>
         <li><a href="#" class="skill-link">CSS</a></li>
         <li><a href="#" class="skill-link">PHP</a></li>
+        <li><a href="#" class="skill-link">JavaScript</a></li>
         <li><a href="#" class="skill-link">React</a></li>
         <li><a href="#" class="skill-link">Node.js</a></li>
         <li><a href="#" class="skill-link">WordPress</a></li>
         <li><a href="#" class="skill-link">Cybersecurity</a></li>
-        <li><a href="#" class="skill-link">Cloud</a></li>
+        <li><a href="#" class="skill-link">Cloud services</a></li>
     </ul>
 </section>
 
