--- a/index.html
+++ b/index.html
@@ -179,13 +179,27 @@
     </div>
   </section>
   
-  <section id="work" class="content-section reveal fade-slide">
-    <h2>My Work</h2>
-    <div class="grid-cards">
-      <div class="service-card"><h3>Fanikauppa(fan store) </h3><p>(React + API)</p></div>
-      <div class="service-card"><h3>Portfolio Site</h3><p>Responsive and dynamic portfolio site (HTML/CSS/JS).</p></div>
-      <div class="service-card"><h3>Dashboard</h3><p>Admin dashboard using Node.js and MongoDB.</p></div>
-    </div>
+    <section id="work" class="content-section reveal fade-slide">
+      <h2>My Work</h2>
+      <div class="grid-cards">
+        <div class="service-card">
+          <h3>Fanikauppa (fan store)</h3>
+          <p>(React + API)</p>
+          <a href="/Portfolio/fanikauppa/index.html" class="hero-button">
+            <span>View Fanikauppa</span>
+            <i class="fa-solid fa-store"></i>
+          </a>
+        </div>
+        <div class="service-card">
+          <h3>Portfolio Site</h3>
+          <p>Responsive and dynamic portfolio site (HTML/CSS/JS).</p>
+        </div>
+        <div class="service-card">
+          <h3>Dashboard</h3>
+          <p>Admin dashboard using Node.js and MongoDB.</p>
+        </div>
+      </div>
+    </section>
   </section>
   
   <section id="blog" class="content-section reveal fade-slide">
