--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </ul>
 
     <div class="social-links-icons">
-      <a href="https://github.com/jonz-dsgn" target="_blank" class="icon-github" aria-label="GitHub">
+      <a href="https://github.com/jmthdev" target="_blank" class="icon-github" aria-label="GitHub">
         <i class="fab fa-github"></i>
       </a>
       <a href="https://linkedin.com/in/joni-haarala" target="_blank" class="icon-linkedin" aria-label="LinkedIn">
