--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <h3>Fanikauppa (fan store)</h3>
           <p>(React + API)</p>
           <a href="/Portfolio/fanikauppa/index.html" class="hero-button">
-            <span>View Fanikauppa</span>
+            <span>Fanikauppa</span>
             <i class="fa-solid fa-store"></i>
           </a>
         </div>
