--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </a>
     </div>
 
-    <button id="toggle-theme" class="button-metal" type="button">Theme</button>
+   /* <button id="toggle-theme" class="button-metal" type="button">Theme</button>*/
   </div>
 
   <section id="home" class="content-section">
