--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
       <h2>My Work</h2>
       <div class="grid-cards">
         <div class="service-card">
-          <h3>Fanikauppa (fan store)</h3>
-          <p>(React + API)</p>
-          <a href="/Portfolio/fanikauppa/index.html" class="hero-button">
-            <span>Fanikauppa</span>
-            <i class="fa-solid fa-store"></i>
-          </a>
+        <h3>React VerkkoKauppa</h3>
+<p>Modern e-commerce with shopping cart, live clock & responsive design</p>
+<a href="/Portfolio/react-verkkokauppa/index.html" class="hero-button">
+  <span>VerkkoKauppa</span>
+  <i class="fa-solid fa-shopping-cart"></i>
+</a>
         </div>
         <div class="service-card">
           <h3>Portfolio Site</h3>
