--- a/index.html
+++ b/index.html
@@ -180,22 +180,22 @@
   
     <section id="work" class="content-section reveal fade-slide">
       <h2>My Work</h2>
-      <div class="grid-cards">
-        <div class="service-card">
-        <h3>React VerkkoKauppa</h3>
-          <p>Modern e-commerce with shopping cart, live clock & responsive design</p>
-          <a href="/Portfolio/react-verkkokauppa/index.html" class="hero-button">
-          <span>VerkkoKauppa</span>
-        <i class="fa-solid fa-shopping-cart"></i>
-      </a>
-        </div>
-        <div class="service-card">
-          <h3>Portfolio Site</h3>
-          <p>Responsive and dynamic portfolio site (HTML/CSS/JS).</p>
-        </div>
-        <div class="service-card">
-        </div>
-      </div>
+<div class="grid-cards">
+  <div class="service-card">
+    <h3>React Verkkokauppa</h3>
+    <p>Modern e-commerce with shopping cart, live clock & responsive design</p>
+    <a href="react-verkkokauppa/index.html" class="hero-button">
+      <span>Verkkokauppa</span>
+      <i class="fa-solid fa-shopping-cart"></i>
+    </a>
+  </div>
+  <div class="service-card">
+    <h3>Portfolio Site</h3>
+    <p>Responsive and dynamic portfolio site (HTML/CSS/JS).</p>
+  </div>
+  <div class="service-card">
+  </div>
+</div>
     </section>
   </section>
   
