--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   <div class="service-card">
     <h3>React Verkkokauppa</h3>
     <p>Modern e-commerce with shopping cart, live clock & responsive design</p>
-    <a href="react-verkkokauppa/index.html" class="hero-button">
+    <a href="./react-verkkokauppa/" class="hero-button">
       <span>Verkkokauppa</span>
       <i class="fa-solid fa-shopping-cart"></i>
     </a>
