--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="tab-navigation">
       <button class="tab-button active" data-tab="skills">SKILLS</button>
       <button class="tab-button" data-tab="work-experience">EXPERIENCE</button>
-      <button class="tab-button" data-tab="code-samples">CODE SAMPLES</button>
+      <button class="tab-button" data-tab="code-samples">CODE</button>
     </div>
 
     <!-- Tab Content -->
